--- a/single_cycle.runs/impl_1/usage_statistics_webtalk.html
+++ b/single_cycle.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1733598</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Mar 18 17:44:48 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Mon Mar 18 19:12:15 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>da54a0eeda75472e875fce00a2c02fac</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -31,19 +31,23 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>vivado_usage</B></TD></TR>
 <TR ALIGN='LEFT'>  <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
-<TR ALIGN='LEFT'>   <TD>addsources=14</TD>
+<TR ALIGN='LEFT'>   <TD>addsources=17</TD>
+   <TD>autoconnecttarget=1</TD>
+   <TD>editundo=1</TD>
    <TD>fliptoviewtaskrtlanalysis=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launchprogramfpga=1</TD>
    <TD>newproject=1</TD>
-   <TD>runbitgen=2</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runimplementation=1</TD>
-   <TD>runsynthesis=1</TD>
+   <TD>openhardwaremanager=1</TD>
+   <TD>runbitgen=3</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=2</TD>
+   <TD>runsynthesis=3</TD>
    <TD>savedesign=3</TD>
-   <TD>settopnode=4</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=3</TD>
-   <TD>simulationrun=4</TD>
-   <TD>toggleviewnavigator=3</TD>
+   <TD>settopnode=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>showview=4</TD>
+   <TD>simulationrun=6</TD>
+   <TD>toggleviewnavigator=7</TD>
    <TD>viewlayoutcmd=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=6</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskprojectmanager=9</TD>
    <TD>viewtaskrtlanalysis=10</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -72,9 +76,9 @@
    <TD>launch_simulation_questa=0</TD>
    <TD>launch_simulation_riviera=0</TD>
    <TD>launch_simulation_vcs=0</TD>
-</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=4</TD>
+</TR><TR ALIGN='LEFT'>   <TD>launch_simulation_xsim=6</TD>
    <TD>simulator_language=Mixed</TD>
-   <TD>srcsetcount=17</TD>
+   <TD>srcsetcount=19</TD>
    <TD>synthesisstrategy=Vivado Synthesis Defaults</TD>
 </TR><TR ALIGN='LEFT'>   <TD>target_language=Verilog</TD>
    <TD>target_simulator=XSim</TD>
@@ -88,40 +92,44 @@
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>post_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=31</TD>
-    <TD>fdce=11</TD>
+    <TD>carry4=36</TD>
+    <TD>fdce=28</TD>
     <TD>fdre=20</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=6</TD>
     <TD>ibuf=9</TD>
-    <TD>ldce=27</TD>
-    <TD>lut1=49</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=40</TD>
-    <TD>lut3=21</TD>
-    <TD>lut4=21</TD>
-    <TD>lut5=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=49</TD>
+    <TD>ldce=28</TD>
+    <TD>lut1=53</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=45</TD>
+    <TD>lut3=32</TD>
+    <TD>lut4=58</TD>
+    <TD>lut5=24</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=91</TD>
+    <TD>muxf7=1</TD>
     <TD>obuf=27</TD>
-    <TD>vcc=3</TD>
+    <TD>rams64e=13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=19</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>pre_unisim_transformation</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>bufg=2</TD>
-    <TD>carry4=31</TD>
-    <TD>fdce=11</TD>
+    <TD>carry4=36</TD>
+    <TD>fdce=28</TD>
     <TD>fdre=20</TD>
-</TR><TR ALIGN='LEFT'>    <TD>gnd=4</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gnd=6</TD>
     <TD>ibuf=9</TD>
-    <TD>ldce=27</TD>
-    <TD>lut1=49</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut2=40</TD>
-    <TD>lut3=21</TD>
-    <TD>lut4=21</TD>
-    <TD>lut5=19</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut6=49</TD>
+    <TD>ldce=28</TD>
+    <TD>lut1=53</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut2=45</TD>
+    <TD>lut3=32</TD>
+    <TD>lut4=58</TD>
+    <TD>lut5=24</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut6=91</TD>
+    <TD>muxf7=1</TD>
     <TD>obuf=27</TD>
-    <TD>vcc=3</TD>
+    <TD>ram64x1s=13</TD>
+</TR><TR ALIGN='LEFT'>    <TD>vcc=19</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
@@ -259,29 +267,33 @@
 <TR ALIGN='LEFT'>    <TD>bufg_functional_category=Clock</TD>
     <TD>bufg_used=2</TD>
     <TD>carry4_functional_category=CarryLogic</TD>
-    <TD>carry4_used=31</TD>
+    <TD>carry4_used=36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>fdce_functional_category=Flop &amp; Latch</TD>
-    <TD>fdce_used=11</TD>
+    <TD>fdce_used=28</TD>
     <TD>fdre_functional_category=Flop &amp; Latch</TD>
     <TD>fdre_used=20</TD>
 </TR><TR ALIGN='LEFT'>    <TD>ibuf_functional_category=IO</TD>
     <TD>ibuf_used=9</TD>
     <TD>ldce_functional_category=Flop &amp; Latch</TD>
-    <TD>ldce_used=26</TD>
+    <TD>ldce_used=28</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut1_functional_category=LUT</TD>
-    <TD>lut1_used=4</TD>
+    <TD>lut1_used=7</TD>
     <TD>lut2_functional_category=LUT</TD>
-    <TD>lut2_used=40</TD>
+    <TD>lut2_used=45</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut3_functional_category=LUT</TD>
-    <TD>lut3_used=21</TD>
+    <TD>lut3_used=31</TD>
     <TD>lut4_functional_category=LUT</TD>
-    <TD>lut4_used=23</TD>
+    <TD>lut4_used=59</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut5_functional_category=LUT</TD>
-    <TD>lut5_used=21</TD>
+    <TD>lut5_used=24</TD>
     <TD>lut6_functional_category=LUT</TD>
-    <TD>lut6_used=45</TD>
-</TR><TR ALIGN='LEFT'>    <TD>obuf_functional_category=IO</TD>
+    <TD>lut6_used=90</TD>
+</TR><TR ALIGN='LEFT'>    <TD>muxf7_functional_category=MuxFx</TD>
+    <TD>muxf7_used=1</TD>
+    <TD>obuf_functional_category=IO</TD>
     <TD>obuf_used=27</TD>
+</TR><TR ALIGN='LEFT'>    <TD>rams64e_functional_category=Distributed Memory</TD>
+    <TD>rams64e_used=13</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -289,73 +301,77 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>slice_logic</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>f7_muxes_available=31700</TD>
     <TD>f7_muxes_fixed=0</TD>
-    <TD>f7_muxes_used=0</TD>
-    <TD>f7_muxes_util_percentage=0.00</TD>
+    <TD>f7_muxes_used=1</TD>
+    <TD>f7_muxes_util_percentage=&lt;0.01</TD>
 </TR><TR ALIGN='LEFT'>    <TD>f8_muxes_available=15850</TD>
     <TD>f8_muxes_fixed=0</TD>
     <TD>f8_muxes_used=0</TD>
     <TD>f8_muxes_util_percentage=0.00</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_distributed_ram_fixed=0</TD>
+    <TD>lut_as_distributed_ram_used=13</TD>
+    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=133</TD>
-    <TD>lut_as_logic_util_percentage=0.21</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_used=215</TD>
+    <TD>lut_as_logic_util_percentage=0.34</TD>
+    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
-    <TD>lut_as_memory_used=0</TD>
-    <TD>lut_as_memory_util_percentage=0.00</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_used=13</TD>
+    <TD>lut_as_memory_util_percentage=0.07</TD>
+    <TD>lut_as_shift_register_fixed=0</TD>
+    <TD>lut_as_shift_register_used=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_flip_flop_available=126800</TD>
     <TD>register_as_flip_flop_fixed=0</TD>
-    <TD>register_as_flip_flop_used=31</TD>
-    <TD>register_as_flip_flop_util_percentage=0.02</TD>
+    <TD>register_as_flip_flop_used=48</TD>
+    <TD>register_as_flip_flop_util_percentage=0.04</TD>
 </TR><TR ALIGN='LEFT'>    <TD>register_as_latch_available=126800</TD>
     <TD>register_as_latch_fixed=0</TD>
-    <TD>register_as_latch_used=26</TD>
+    <TD>register_as_latch_used=28</TD>
     <TD>register_as_latch_util_percentage=0.02</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_luts_available=63400</TD>
     <TD>slice_luts_fixed=0</TD>
-    <TD>slice_luts_used=133</TD>
-    <TD>slice_luts_util_percentage=0.21</TD>
+    <TD>slice_luts_used=228</TD>
+    <TD>slice_luts_util_percentage=0.36</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slice_registers_available=126800</TD>
     <TD>slice_registers_fixed=0</TD>
-    <TD>slice_registers_used=57</TD>
-    <TD>slice_registers_util_percentage=0.04</TD>
-</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.04</TD>
+    <TD>slice_registers_used=76</TD>
+    <TD>slice_registers_util_percentage=0.06</TD>
+</TR><TR ALIGN='LEFT'>    <TD>fully_used_lut_ff_pairs_fixed=0.06</TD>
     <TD>fully_used_lut_ff_pairs_used=0</TD>
     <TD>lut_as_distributed_ram_fixed=0</TD>
-    <TD>lut_as_distributed_ram_used=0</TD>
+    <TD>lut_as_distributed_ram_used=13</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_logic_available=63400</TD>
     <TD>lut_as_logic_fixed=0</TD>
-    <TD>lut_as_logic_used=133</TD>
-    <TD>lut_as_logic_util_percentage=0.21</TD>
+    <TD>lut_as_logic_used=215</TD>
+    <TD>lut_as_logic_util_percentage=0.34</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_memory_available=19000</TD>
     <TD>lut_as_memory_fixed=0</TD>
-    <TD>lut_as_memory_used=0</TD>
-    <TD>lut_as_memory_util_percentage=0.00</TD>
+    <TD>lut_as_memory_used=13</TD>
+    <TD>lut_as_memory_util_percentage=0.07</TD>
 </TR><TR ALIGN='LEFT'>    <TD>lut_as_shift_register_fixed=0</TD>
     <TD>lut_as_shift_register_used=0</TD>
     <TD>lut_ff_pairs_with_one_unused_flip_flop_fixed=0</TD>
-    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=11</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=11</TD>
-    <TD>lut_ff_pairs_with_one_unused_lut_output_used=9</TD>
+    <TD>lut_ff_pairs_with_one_unused_flip_flop_used=32</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_ff_pairs_with_one_unused_lut_output_fixed=32</TD>
+    <TD>lut_ff_pairs_with_one_unused_lut_output_used=29</TD>
     <TD>lut_flip_flop_pairs_available=63400</TD>
     <TD>lut_flip_flop_pairs_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=11</TD>
-    <TD>lut_flip_flop_pairs_util_percentage=0.02</TD>
+</TR><TR ALIGN='LEFT'>    <TD>lut_flip_flop_pairs_used=32</TD>
+    <TD>lut_flip_flop_pairs_util_percentage=0.05</TD>
     <TD>slice_available=15850</TD>
     <TD>slice_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>slice_used=56</TD>
-    <TD>slice_util_percentage=0.35</TD>
+</TR><TR ALIGN='LEFT'>    <TD>slice_used=84</TD>
+    <TD>slice_util_percentage=0.53</TD>
     <TD>slicel_fixed=0</TD>
-    <TD>slicel_used=45</TD>
+    <TD>slicel_used=60</TD>
 </TR><TR ALIGN='LEFT'>    <TD>slicem_fixed=0</TD>
-    <TD>slicem_used=11</TD>
-    <TD>unique_control_sets_used=4</TD>
-    <TD>using_o5_and_o6_fixed=4</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=21</TD>
-    <TD>using_o5_output_only_fixed=21</TD>
+    <TD>slicem_used=24</TD>
+    <TD>unique_control_sets_used=5</TD>
+    <TD>using_o5_and_o6_fixed=5</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o5_and_o6_used=0</TD>
+    <TD>using_o5_output_only_fixed=0</TD>
     <TD>using_o5_output_only_used=0</TD>
     <TD>using_o6_output_only_fixed=0</TD>
-</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=112</TD>
+</TR><TR ALIGN='LEFT'>    <TD>using_o6_output_only_used=13</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
@@ -405,24 +421,24 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>actual_expansions=299008</TD>
+<TR ALIGN='LEFT'>    <TD>actual_expansions=359429</TD>
     <TD>bogomips=0</TD>
     <TD>bram18=0</TD>
     <TD>bram36=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>bufg=0</TD>
     <TD>bufr=0</TD>
-    <TD>ctrls=4</TD>
+    <TD>ctrls=5</TD>
     <TD>dsp=0</TD>
 </TR><TR ALIGN='LEFT'>    <TD>effort=2</TD>
-    <TD>estimated_expansions=174318</TD>
-    <TD>ff=57</TD>
+    <TD>estimated_expansions=264180</TD>
+    <TD>ff=76</TD>
     <TD>global_clocks=2</TD>
 </TR><TR ALIGN='LEFT'>    <TD>high_fanout_nets=0</TD>
     <TD>iob=36</TD>
-    <TD>lut=133</TD>
-    <TD>movable_instances=288</TD>
-</TR><TR ALIGN='LEFT'>    <TD>nets=367</TD>
-    <TD>pins=1695</TD>
+    <TD>lut=229</TD>
+    <TD>movable_instances=445</TD>
+</TR><TR ALIGN='LEFT'>    <TD>nets=537</TD>
+    <TD>pins=2631</TD>
     <TD>pll=0</TD>
     <TD>router_runtime=0.000000</TD>
 </TR><TR ALIGN='LEFT'>    <TD>router_timing_driven=1</TD>
@@ -474,10 +490,10 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>elapsed=00:00:23s</TD>
+<TR ALIGN='LEFT'>    <TD>elapsed=00:00:29s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=426.168MB</TD>
-    <TD>memory_peak=649.574MB</TD>
+    <TD>memory_gain=437.063MB</TD>
+    <TD>memory_peak=660.422MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
