--- a/single_cycle.runs/impl_1/usage_statistics_webtalk.html
+++ b/single_cycle.runs/impl_1/usage_statistics_webtalk.html
@@ -4,11 +4,11 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1733598</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Mar 19 01:20:53 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Mar 19 03:35:43 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>Vivado v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>da54a0eeda75472e875fce00a2c02fac</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>12</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>18</TD>
   <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>TRUE</TD>
@@ -33,35 +33,37 @@
    <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>java_command_handlers</B></TD></TR>
 <TR ALIGN='LEFT'>   <TD>addsources=19</TD>
    <TD>autoconnecttarget=2</TD>
+   <TD>createhardwaredashboards=1</TD>
    <TD>editpaste=1</TD>
-   <TD>editundo=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>fliptoviewtaskrtlanalysis=2</TD>
-   <TD>launchprogramfpga=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>editundo=1</TD>
+   <TD>fliptoviewtaskrtlanalysis=2</TD>
+   <TD>launchprogramfpga=17</TD>
    <TD>newproject=1</TD>
-   <TD>openhardwaremanager=14</TD>
-</TR><TR ALIGN='LEFT'>   <TD>openproject=2</TD>
+</TR><TR ALIGN='LEFT'>   <TD>openhardwaremanager=19</TD>
+   <TD>openproject=2</TD>
    <TD>openrecenttarget=5</TD>
-   <TD>programdevice=11</TD>
-   <TD>projectsettingscmdhandler=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>refreshdevice=3</TD>
-   <TD>runbitgen=13</TD>
-   <TD>runimplementation=15</TD>
+   <TD>programdevice=17</TD>
+</TR><TR ALIGN='LEFT'>   <TD>projectsettingscmdhandler=1</TD>
+   <TD>projectsummary=1</TD>
+   <TD>refreshdevice=3</TD>
+   <TD>runbitgen=19</TD>
+</TR><TR ALIGN='LEFT'>   <TD>runimplementation=21</TD>
    <TD>runschematic=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>runsynthesis=14</TD>
+   <TD>runsynthesis=20</TD>
    <TD>savedesign=3</TD>
-   <TD>savefileproxyhandler=1</TD>
+</TR><TR ALIGN='LEFT'>   <TD>savefileproxyhandler=1</TD>
    <TD>settopnode=7</TD>
-</TR><TR ALIGN='LEFT'>   <TD>showview=4</TD>
+   <TD>showview=4</TD>
    <TD>simulationrelaunch=4</TD>
-   <TD>simulationrestart=7</TD>
+</TR><TR ALIGN='LEFT'>   <TD>simulationrestart=7</TD>
    <TD>simulationrun=25</TD>
-</TR><TR ALIGN='LEFT'>   <TD>simulationrunall=1</TD>
+   <TD>simulationrunall=1</TD>
    <TD>simulationrunfortime=42</TD>
-   <TD>toggleviewnavigator=12</TD>
+</TR><TR ALIGN='LEFT'>   <TD>toggleviewnavigator=12</TD>
    <TD>viewlayoutcmd=1</TD>
-</TR><TR ALIGN='LEFT'>   <TD>viewtaskprogramanddebug=1</TD>
-   <TD>viewtaskprojectmanager=27</TD>
-   <TD>viewtaskrtlanalysis=11</TD>
+   <TD>viewtaskprogramanddebug=1</TD>
+   <TD>viewtaskprojectmanager=28</TD>
+</TR><TR ALIGN='LEFT'>   <TD>viewtaskrtlanalysis=11</TD>
    <TD>viewtasksimulation=3</TD>
 </TR>  </TABLE>
   <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
@@ -511,8 +513,8 @@
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
 <TR ALIGN='LEFT'>    <TD>elapsed=00:00:30s</TD>
     <TD>hls_ip=0</TD>
-    <TD>memory_gain=442.652MB</TD>
-    <TD>memory_peak=666.363MB</TD>
+    <TD>memory_gain=444.203MB</TD>
+    <TD>memory_peak=667.313MB</TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
