--- a/single_cycle.sim/sim_1/behav/xsim.dir/DataMem_tb_behav/webtalk/usage_statistics_ext_xsim.html
+++ b/single_cycle.sim/sim_1/behav/xsim.dir/DataMem_tb_behav/webtalk/usage_statistics_ext_xsim.html
@@ -4,13 +4,13 @@
   <TR ALIGN='CENTER' BGCOLOR='#A7BFDE'><TD COLSPAN='4'><B>software_version_and_target_device</B></TD></TR>
 <TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>beta</B></TD><TD>FALSE</TD>
   <TD BGCOLOR='#DBE5F1'><B>build_version</B></TD><TD>1733598</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Fri Mar 22 17:33:34 2019</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>date_generated</B></TD><TD>Tue Apr 09 10:02:24 2019</TD>
   <TD BGCOLOR='#DBE5F1'><B>os_platform</B></TD><TD>WIN64</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>product_version</B></TD><TD>XSIM v2016.4 (64-bit)</TD>
   <TD BGCOLOR='#DBE5F1'><B>project_id</B></TD><TD>da54a0eeda75472e875fce00a2c02fac</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>2</TD>
-  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
-</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>fe19f423-87ef-44f4-ba25-098dbfa26b2f</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>project_iteration</B></TD><TD>1</TD>
+  <TD BGCOLOR='#DBE5F1'><B>random_id</B></TD><TD>0949f662-44cd-44c9-8262-45f2286fb4ce</TD>
+</TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>registration_id</B></TD><TD>0949f662-44cd-44c9-8262-45f2286fb4ce</TD>
   <TD BGCOLOR='#DBE5F1'><B>route_design</B></TD><TD>FALSE</TD>
 </TR><TR ALIGN='LEFT'>  <TD BGCOLOR='#DBE5F1'><B>target_device</B></TD><TD>not_applicable</TD>
   <TD BGCOLOR='#DBE5F1'><B>target_family</B></TD><TD>not_applicable</TD>
@@ -35,17 +35,27 @@
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>command_line_options</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>command=xsim</TD>
+<TR ALIGN='LEFT'>    <TD>command=xelab</TD>
+    <TD>debug=typical</TD>
+    <TD>dpi_used=false</TD>
+    <TD>file_counter=3</TD>
+</TR><TR ALIGN='LEFT'>    <TD>gendll=false</TD>
+    <TD>hwcosim=false</TD>
+    <TD>sdfmodeling=false</TD>
+    <TD>vhdl2008=false</TD>
 </TR>   </TABLE>
    </TD></TR>
    <TR><TD>
    <TABLE BORDER='1' CELLSPACING='0' WIDTH='100%'>
     <TR ALIGN='CENTER' BGCOLOR='#DBE5F1'><TD COLSPAN='4'><B>usage</B></TD></TR>
-<TR ALIGN='LEFT'>    <TD>iteration=0</TD>
-    <TD>runtime=1 us</TD>
-    <TD>simulation_memory=10544_KB</TD>
-    <TD>simulation_time=0.09_sec</TD>
-</TR><TR ALIGN='LEFT'>    <TD>trace_waveform=true</TD>
+<TR ALIGN='LEFT'>    <TD>compiler_memory=39896_KB</TD>
+    <TD>compiler_time=0.41_sec</TD>
+    <TD>simulation_image_code=113 KB</TD>
+    <TD>simulation_image_data=2 KB</TD>
+</TR><TR ALIGN='LEFT'>    <TD>total_instances=3</TD>
+    <TD>total_nets=72</TD>
+    <TD>total_processes=25</TD>
+    <TD>xilinx_hdl_libraries_used=secureip unimacro_ver unisims_ver </TD>
 </TR>   </TABLE>
    </TD></TR>
   </TABLE><BR>
